<resources>
    <string name="app_name">DjGs</string>
    <string name="action_settings">Settings</string>
    <string name="action_facerecognition">Face Recognition</string>
    <string name="action_facerecognitionInConnect">Face Recognition in Connect</string>
    <string name="action_favorite">Favorite</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="connect_to_drone">Connect to Drone</string>
    <string name="noProductConnected">There is no product currently connected</string>
    <string name="rcInitialValue">RCxx</string>
    <string name="placeholderTimeRemaining">Time Remaining: Not Set</string>
    <string name="placeholderAltitutde">Alt: n/a</string>
    <string name="placeholderVerticalVelocity">Vert V: n/a</string>
    <string name="placeholderHorizontalVelocity">Hor V: n/a</string>
    <string name="placeholderAltitudeUltra">Alt Ultra: n/a</string>
    <string name="btnLiveStream">Live Stream</string>
    <string name="btnFrames">Start Face Recognition</string>
    <string name="options">Options</string>
    <string name="placeholderCamera">Current Camera Status not yet obtained</string>
    <string name="btnClose">Close</string>

</resources>
