<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context="com.ecolumbia.djgs.OptionsActivity">

    <android.support.v7.widget.Toolbar
        android:id="@+id/toolbarOptions"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:background="?attr/colorPrimary"
        android:elevation="4dp"
        android:theme="@style/ThemeOverlay.AppCompat.ActionBar"
        app:popupTheme="@style/ThemeOverlay.AppCompat.Light">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal">
            <TextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:id="@+id/tvTitleOptions"
                android:text="@string/options"
                android:textSize="36dp"
                android:layout_marginLeft="3dp"
                android:layout_marginRight="3dp"
                android:gravity="center_vertical|center_horizontal" />
        </LinearLayout>

    </android.support.v7.widget.Toolbar>

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@+id/toolbarOptions">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/placeholderCamera"
            android:id="@+id/tvCurrentCameraMode"
            android:layout_below="@+id/toolbarOptions" />

        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <ImageButton
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/btnChangeToCamera"
                android:src="@drawable/ic_action_camera_black_18dp"
                android:onClick="setModeToCamera" />

            <ImageButton
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/btnChangeToVideo"
                android:src="@drawable/ic_action_video_black_18dp"
                android:onClick="setModeToVideo" />
        </LinearLayout>

    </LinearLayout>

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/btnClose"
        android:id="@+id/btnClose"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="5dp"
        android:onClick="btnClose_onClick" />


</RelativeLayout>
