<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.ecolumbia.djgs.ControlActivity">

    <android.support.v7.widget.Toolbar
        android:id="@+id/toolbar_control"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:alpha="0.5"
        android:background="?attr/colorPrimary"
        android:elevation="4dp"
        android:theme="@style/ThemeOverlay.AppCompat.ActionBar"
        app:logo="@drawable/ic_logo_toolbar_black_48dp"
        app:logoDescription="DjGs"
        app:popupTheme="@style/ThemeOverlay.AppCompat.Light">

        <RelativeLayout
            android:id="@+id/rl_Toolbar"
            android:layout_width="match_parent"
            android:layout_height="match_parent">


            <LinearLayout
                android:id="@+id/ll_FlightStatus"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:orientation="horizontal"
                android:layout_centerVertical="true"
                android:gravity="center"
                android:layout_marginTop="40dp"
                >

                <TextView
                    android:id="@+id/tvFlightMode"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_marginLeft="3dp"
                    android:layout_marginRight="3dp"
                    android:gravity="center_vertical"
                    android:textSize="12dp" />

                <TextView
                    android:id="@+id/tvSatellite"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_marginLeft="3dp"
                    android:layout_marginRight="3dp"
                    android:gravity="center_vertical"
                    android:textSize="12dp" />

                <TextView
                    android:id="@+id/tvToolbarMessage"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_marginLeft="3dp"
                    android:layout_marginRight="3dp"
                    android:ellipsize="marquee"
                    android:gravity="center_vertical"
                    android:maxWidth="100dp"
                    android:minWidth="100dp"
                    android:text=""
                    android:textSize="12dp"></TextView>

                <TextView
                    android:id="@+id/tvAirlinkUplinkLevel"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_marginLeft="3dp"
                    android:layout_marginRight="3dp"
                    android:gravity="center_vertical"
                    android:textSize="12dp" />

                <TextView
                    android:id="@+id/tvAirlinkDownlinkLevel"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_marginLeft="3dp"
                    android:layout_marginRight="3dp"
                    android:gravity="center_vertical"
                    android:textSize="12dp" />


                <TextView
                    android:id="@+id/tvRemoteControllerBatteryPercent"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_marginLeft="3dp"
                    android:layout_marginRight="3dp"
                    android:gravity="center_vertical"
                    android:text="@string/rcInitialValue"
                    android:textSize="12dp" />

                <TextView
                    android:id="@+id/tvBatteryStatus"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_marginLeft="3dp"
                    android:layout_marginRight="3dp"
                    android:gravity="center_vertical"
                    android:textSize="12dp" />

            </LinearLayout>

            <LinearLayout
                android:id="@+id/ll_TimeRemaining"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_alignParentBottom="true"
                android:layout_gravity="center_vertical"
                android:layout_centerVertical="true"
                android:gravity="center"                >

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/tvFlightStatus"
                    android:layout_marginRight="3dp" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/placeholderTimeRemaining"
                    android:id="@+id/tvTimeRemaining"
                    android:layout_marginRight="3dp" />

                <ProgressBar
                    style="?android:attr/progressBarStyleHorizontal"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:id="@+id/pbar_RemainingTime"
                    android:max="100"
                    android:progress="10" />
            </LinearLayout>

        </RelativeLayout>
    </android.support.v7.widget.Toolbar>


    <LinearLayout
        android:id="@+id/ll_FragmentContainer_Large"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@+id/toolbar_control"
        android:orientation="vertical">

    </LinearLayout>

    <LinearLayout
        android:id="@+id/ll_FragmentContainer_Small"
        android:layout_width="300dp"
        android:layout_height="150dp"
        android:layout_alignParentBottom="true"
        android:background="#e2e1e1"
        android:orientation="vertical"
        android:paddingBottom="2dp"
        android:paddingLeft="2dp"
        android:paddingRight="2dp"
        android:paddingTop="2dp">

    </LinearLayout>

    <LinearLayout
        android:id="@+id/ll_FragmentContainer"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_alignParentEnd="false"
        android:orientation="vertical"
        android:visibility="invisible"></LinearLayout>

    <LinearLayout
        android:id="@+id/ll_TakeOffLand"
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:layout_alignLeft="@+id/ll_FragmentContainer_Large"
        android:layout_centerVertical="true"
        android:gravity="center_vertical"
        android:orientation="vertical">

        <ImageButton
            android:id="@+id/btnTakeOff"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:onClick="takeoff"
            android:src="@drawable/ic_flight_takeoff_black_48dp" />

        <ImageButton
            android:id="@+id/btnLand"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:onClick="land"
            android:src="@drawable/ic_flight_land_black_48dp" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/ll_CameraControls"
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:layout_alignRight="@+id/ll_FragmentContainer_Large"
        android:layout_centerVertical="true"
        android:gravity="center_vertical"
        android:orientation="vertical">

        <ImageButton
            android:id="@+id/btnShootPhoto"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:onClick="shootPhoto"
            android:src="@drawable/ic_action_camera_black_18dp" />

        <ImageButton
            android:id="@+id/btnStartVideo"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:onClick="startVideo"
            android:src="@drawable/ic_action_playback_play_black_18dp" />

        <ImageButton
            android:id="@+id/btnStopVideo"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:onClick="stopVideo"
            android:src="@drawable/ic_action_playback_stop_black_18dp" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/ll_TemporaryMessage"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignTop="@+id/ll_FragmentContainer_Large"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/tvTemporaryMessage"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/accent_material_light"
            android:textColor="#ffffff"
            android:visibility="invisible" />
    </LinearLayout>

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/ll_Position"
        android:layout_alignBottom="@+id/ll_FragmentContainer_Large"
        android:layout_toRightOf="@+id/ll_FragmentContainer_Small"
        android:background="?attr/colorPrimary"
        android:alpha="0.8">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/placeholderAltitutde"
            android:id="@+id/tvAltitude"
            android:layout_marginLeft="@dimen/control_small_spacing"
            android:layout_marginRight="@dimen/control_small_spacing"
            android:maxWidth="100dp"
            android:minWidth="100dp"
            android:maxLines="1" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/placeholderVerticalVelocity"
            android:id="@+id/tvVerticalSpeed"
            android:layout_marginRight="@dimen/control_small_spacing"
            android:maxWidth="100dp"
            android:minWidth="100dp"
            android:maxLines="1" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/placeholderHorizontalVelocity"
            android:id="@+id/tvHorizontalSpeed"
            android:layout_marginRight="@dimen/control_small_spacing"
            android:minWidth="100dp"
            android:maxWidth="100dp"
            android:minLines="1" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/placeholderAltitudeUltra"
            android:id="@+id/tv_Altitude_UltraSonic"
            android:layout_marginRight="@dimen/control_small_spacing"
            android:maxWidth="100dp"
            android:minWidth="100dp"
            android:maxLines="1" />
    </LinearLayout>


</RelativeLayout>
